Made last changes

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 							<p></p>
 							<p></p>
 							<br> <br>
-							<p>\n</p>
+							<p></p>
 								<a href="#footer" class="goto-next scrolly">Next</a>
 							</div>
 						</div>
@@ -186,7 +186,7 @@
 				<footer id="footer">
 					<ul class="icons">
 						<li><a href="https://www.linkedin.com/in/dadou-sabrina-thea-ikirezi/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="https://github.com/dashboard" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; 2024 Dadou Sabrina Thea Ikirezi </li>
