--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<header id="header">
+			<!--<header id="header">
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -29,7 +29,7 @@
 							</li>
 						</ul>
 					</nav>
-				</header>
+				</header>-->
 
 			<!-- Banner -->
 				<section id="banner">
